--- a/package.json
+++ b/package.json
@@ -3,14 +3,15 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build --prod",
+    "start": "node server.js",
+    "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "heroku-postbuild": "npm run build"
+    "postinstall": "ng build  --aot --prod"
   },
   "engines": {
-    "node": "12.x"
+    "node": "12.14.1",
+    "npm": "6.13.4"
   },
   "private": true,
   "dependencies": {
@@ -22,6 +23,7 @@
     "@angular/platform-browser": "~12.0.2",
     "@angular/platform-browser-dynamic": "~12.0.2",
     "@angular/router": "~12.0.2",
+    "express": "^4.17.1",
     "rxjs": "~6.6.0",
     "serve": "^11.3.2",
     "tslib": "^2.1.0",
